# datastream

./: README.md  datastream.py  loader_funcs.py  pyproject.toml  utils.py
tests/: __init__.py  test_datastream.py  test_dictarray.py  test_parse_data.py  test_parse_file.py  test_parsing.py  test_roi.py
tests/data_sets/: csv  csv_with_header  dict_of_empty  dict_of_lists  dict_of_lists_multiline  json_dump_dict_of_lists  json_dump_list_of_dicts  json_dump_list_of_lists  list_of_dicts_oneline  list_of_lists  listoflists_multiline  np_save_arr.npy  np_save_structuredarray.npy  np_savetxt_arr.npy  np_savetxt_structarr  np_savetxt_structarr_header  np_savetxt_structuredarray_header_delim  some_dicts  some_lists_header  some_lists_multiline  some_lists_oneline  somedicts_oneline  somelists_oneline
