[project]
name = "datastream"
version = "0.7"
description = ""
authors = [
    { name = "timjolson", email = "timjolson@users.noreply.github.com" }
]
dependencies = [
    "numpy"
]

[project.optional-dependencies]
test = [
    "pytest"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
