[project]
name = "datastream"
version = "0.7"
description = ""
authors = [
    { name = "timjolson", email = "timjolson@users.noreply.github.com" }
]
readme = "README.md"
urls = { "Homepage" = "https://github.com/timjolson/datastream" }
license = { file = "LICENSE" }
dependencies = [
    "numpy"
]

[project.optional-dependencies]
test = [
    "pytest"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
